--- a/src/components/styleComponents/CreateTodoButton.css
+++ b/src/components/styleComponents/CreateTodoButton.css
@@ -1,4 +1,4 @@
-button {
+.CreateTodoButton-button {
   position: fixed;
   /* background-color: transparent;
   border: 1px solid ; */
@@ -15,7 +15,7 @@ button {
   color: rgba(0, 0, 0, 0.514);
 }
 
-.button-container {
+.butCreateTodoButton-container {
   display: flex;
   justify-content: center;
 }
