--- a/src/components/styleComponents/TodoItem.css
+++ b/src/components/styleComponents/TodoItem.css
@@ -19,6 +19,15 @@
   text-decoration: line-through;
 }
 
+.TodoItem-button--delete {
+  width: 22px;
+  height: 22px;
+  background-position: center;
+  background-repeat: no-repeat ;
+  background-size: contain;
+  background: url('./bin.svg');
+}
+
 .TodoItem-task {
   display: flex;
   align-items: center;
