--- a/src/Modal/Modal.css
+++ b/src/Modal/Modal.css
@@ -1,5 +1,5 @@
 .modal-background{
-  background: rgba(0, 0, 0, 0.205);
+  background: rgb(0, 0, 0, 0.02);
   position: fixed;
   top: -10px;
   left: -10px;
@@ -9,5 +9,5 @@
   justify-content: center;
   align-items: center;
   color: white;
-  backdrop-filter: blur(3px);
+  backdrop-filter: blur(7px);
 }
